small correction in help text
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@777 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1378,9 +1378,7 @@
 		<tr>
 		<td>field</td>
 		<td>
-		field to which apply the term. Available fields: title,
-				   filename, category, link, size, age, genre, rating. If not specified
-				   the default field "title" is used;
+		field to which apply the term. If not specified the default field "title" is used;
 		</td></tr>
 		<tr><td>command</td>
 		<td>
