--- a/webui/index.html
+++ b/webui/index.html
@@ -350,23 +350,26 @@
 
 <!-- *** MESSAGES: TOOLBAR -->
 
-			<div class="btn-toolbar form-inline section-toolbar">
+			<div class="btn-toolbar form-inline section-toolbar" id ="MessagesTab_Toolbar">
+
+				<!-- EDIT BUTTONS -->
 				<div class="btn-group">
 					<button class="btn" onclick="Messages.clearClick()" title="Delete all messages"><i class="icon-trash"></i> <span class="btn-caption">Clear</span></button>
 				</div>
-<!--
-				<div class="btn-group">
-					<div class="controls" style="float:left;">
-						<div class="input-prepend">
-							<span class="add-on">Filter&nbsp;</span>
-						</div>
-					</div>
-					<button class="btn active" onclick="TODO()" title="Show/Hide Detail-messages">Detail</button>
-					<button class="btn active" onclick="TODO()" title="Show/Hide Info-messages">Info</button>
-					<button class="btn active" onclick="TODO()" title="Show/Hide Warning-messages">Warning</button>
-					<button class="btn active" onclick="TODO()" title="Show/Hide Error-messages">Error</button>
+
+				<!-- KIND FILTER BUTTONS -->
+				<div class="btn-group phone-hide">
+					<button class="btn btn-inverse" onclick="Messages.filter('ALL')" title="Show All">All &nbsp;<span class="badge badge-active" id="Messages_Badge_ALL">?</span></button>
+					<button class="btn" onclick="Messages.filter('DETAIL')" title="Show only Detail">Detail &nbsp;<span class="badge" id="Messages_Badge_DETAIL">?</span></button>
+					<button class="btn" onclick="Messages.filter('INFO')" title="Show only Info">Info &nbsp;<span class="badge" id="Messages_Badge_INFO">?</span></button>
+					<button class="btn" onclick="Messages.filter('WARNING')" title="Show only Warning">Warning &nbsp;<span class="badge" id="Messages_Badge_WARNING">?</span></button>
+					<button class="btn" onclick="Messages.filter('ERROR')" title="Show only Error">Error &nbsp;<span class="badge" id="Messages_Badge_ERROR">?</span></button>
 				</div>
--->
+				<div class="btn-group phone-only inline"><button class="btn btn-inverse" onclick="Messages.filter('ALL')" title="Show All">A &nbsp;<span class="badge badge-active" id="Messages_Badge_ALL2">?</span></button></div>
+				<div class="btn-group phone-only inline"><button class="btn" onclick="Messages.filter('DETAIL')" title="Show only Detail">D &nbsp;<span class="badge" id="Messages_Badge_DETAIL2">?</span></button></div>
+				<div class="btn-group phone-only inline"><button class="btn" onclick="Messages.filter('INFO')" title="Show only Info">I &nbsp;<span class="badge" id="Messages_Badge_INFO2">?</span></button></div>
+				<div class="btn-group phone-only inline"><button class="btn" onclick="Messages.filter('WARNING')" title="Show only Warning">W &nbsp;<span class="badge" id="Messages_Badge_WARNING2">?</span></button></div>
+				<div class="btn-group phone-only inline"><button class="btn" onclick="Messages.filter('ERROR')" title="Show only Error">E &nbsp;<span class="badge" id="Messages_Badge_ERROR2">?</span></button></div>
 
 				<div class="btn-group phone-only inline" id="MessagesRecordsPerPageBlockPhone">
 				</div>
@@ -1132,25 +1135,27 @@
 				<div>
 					<div class="row-fluid modal-scrollheader">
 						<div class="pull-left btn-toolbar form-inline modal-toolbar" id="FeedDialog_Toolbar">
+
 							<!-- STATUS FILTER BUTTONS -->
 							<div class="btn-group phone-hide">
-								<button class="btn btn-primary" onclick="FeedDialog.filter('ALL')" title="Show All">All &nbsp;<span class="badge badge-primary" id="FeedDialog_Badge_ALL">?</span></button>
+								<button class="btn btn-inverse" onclick="FeedDialog.filter('ALL')" title="Show All">All &nbsp;<span class="badge badge-active" id="FeedDialog_Badge_ALL">?</span></button>
 								<button class="btn" onclick="FeedDialog.filter('NEW')" title="Show only New">New &nbsp;<span class="badge" id="FeedDialog_Badge_NEW">?</span></button>
 								<button class="btn" onclick="FeedDialog.filter('FETCHED')" title="Show only Fetched">Fetched &nbsp;<span class="badge" id="FeedDialog_Badge_FETCHED">?</span></button>
 								<button class="btn" onclick="FeedDialog.filter('BACKLOG')" title="Show only Backlog">Backlog &nbsp;<span class="badge" id="FeedDialog_Badge_BACKLOG">?</span></button>
 							</div>
-							<div class="btn-group phone-only inline"><button class="btn btn-primary" onclick="FeedDialog.filter('ALL')" title="Show All">All <span class="badge badge-primary" id="FeedDialog_Badge_ALL2">?</span></button></div>
+							<div class="btn-group phone-only inline"><button class="btn btn-inverse" onclick="FeedDialog.filter('ALL')" title="Show All">All <span class="badge badge-active" id="FeedDialog_Badge_ALL2">?</span></button></div>
 							<div class="btn-group phone-only inline"><button class="btn" onclick="FeedDialog.filter('NEW')" title="Show only New">New <span class="badge" id="FeedDialog_Badge_NEW2">?</span></button></div>
 							<div class="btn-group phone-only inline"><button class="btn" onclick="FeedDialog.filter('FETCHED')" title="Show only Fetched">Fetched <span class="badge" id="FeedDialog_Badge_FETCHED2">?</span></button></div>
 							<div class="btn-group phone-only inline"><button class="btn" onclick="FeedDialog.filter('BACKLOG')" title="Show only Backlog">Backlog <span class="badge" id="FeedDialog_Badge_BACKLOG2">?</span></button></div>
 
 							<!-- TITLE/FILENAME BUTTONS -->
 							<div class="btn-group phone-hide">
-								<button class="btn btn-primary FeedDialog-names" id="FeedDialog_Titles" onclick="FeedDialog.setFilenameMode(false)" title="Show Titles">Titles</button>
+								<button class="btn btn-inverse FeedDialog-names" id="FeedDialog_Titles" onclick="FeedDialog.setFilenameMode(false)" title="Show Titles">Titles</button>
 								<button class="btn FeedDialog-names" id="FeedDialog_Filenames" onclick="FeedDialog.setFilenameMode(true)" title="Show Filenames">Filenames</button>
 							</div>
-							<div class="btn-group phone-only inline"><button class="btn FeedDialog-names btn-primary" id="FeedDialog_Titles2" onclick="FeedDialog.setFilenameMode(false)" title="Show Titles">Titles</button></div>
+							<div class="btn-group phone-only inline"><button class="btn FeedDialog-names btn-inverse" id="FeedDialog_Titles2" onclick="FeedDialog.setFilenameMode(false)" title="Show Titles">Titles</button></div>
 							<div class="btn-group phone-only inline"><button class="btn FeedDialog-names" id="FeedDialog_Filenames2" onclick="FeedDialog.setFilenameMode(true)" title="Show Filenames">Filenames</button></div>
+
 						</div>
 						<div class="pull-right" style="margin-bottom:10px;"><input id="FeedDialog_ItemTable_filter" class="search-query" placeholder="Search" type="text"></div>
 					</div>
@@ -1200,22 +1205,22 @@
 
 						<!-- STATUS FILTER BUTTONS -->
 						<div class="btn-group phone-hide FeedFilterDialog-filter">
-							<button class="btn btn-primary" onclick="FeedFilterDialog.filter('ALL')" title="Show All">All &nbsp;<span class="badge badge-primary" id="FeedFilterDialog_Badge_ALL">?</span></button>
+							<button class="btn btn-inverse" onclick="FeedFilterDialog.filter('ALL')" title="Show All">All &nbsp;<span class="badge badge-active" id="FeedFilterDialog_Badge_ALL">?</span></button>
 							<button class="btn" onclick="FeedFilterDialog.filter('ACCEPTED')" title="Show only Accepted">Accepted &nbsp;<span class="badge" id="FeedFilterDialog_Badge_ACCEPTED">?</span></button>
 							<button class="btn" onclick="FeedFilterDialog.filter('REJECTED')" title="Show only Rejected">Rejected &nbsp;<span class="badge" id="FeedFilterDialog_Badge_REJECTED">?</span></button>
 							<button class="btn" onclick="FeedFilterDialog.filter('IGNORED')" title="Show only Ignored">Ignored &nbsp;<span class="badge" id="FeedFilterDialog_Badge_IGNORED">?</span></button>
 						</div>
-						<div class="btn-group phone-only inline FeedFilterDialog-filter"><button class="btn btn-primary" onclick="FeedFilterDialog.filter('ALL')" title="Show All">All <span class="badge badge-primary" id="FeedFilterDialog_Badge_ALL2">?</span></button></div>
+						<div class="btn-group phone-only inline FeedFilterDialog-filter"><button class="btn btn-inverse" onclick="FeedFilterDialog.filter('ALL')" title="Show All">All <span class="badge badge-active" id="FeedFilterDialog_Badge_ALL2">?</span></button></div>
 						<div class="btn-group phone-only inline FeedFilterDialog-filter"><button class="btn" onclick="FeedFilterDialog.filter('ACCEPTED')" title="Show only Accepted">Accepted <span class="badge" id="FeedFilterDialog_Badge_ACCEPTED2">?</span></button></div>
 						<div class="btn-group phone-only inline FeedFilterDialog-filter"><button class="btn" onclick="FeedFilterDialog.filter('REJECTED')" title="Show only Rejected">Rejected <span class="badge" id="FeedFilterDialog_Badge_REJECTED2">?</span></button></div>
 						<div class="btn-group phone-only inline FeedFilterDialog-filter"><button class="btn" onclick="FeedFilterDialog.filter('IGNORED')" title="Show only Ignored">Rejected <span class="badge" id="FeedFilterDialog_Badge_IGNORED2">?</span></button></div>
 
 						<!-- TITLE/FILENAME BUTTONS -->
 						<div class="btn-group phone-hide FeedFilterDialog-filter">
-							<button class="btn btn-primary FeedFilterDialog-names" id="FeedFilterDialog_Titles" onclick="FeedFilterDialog.setFilenameMode(false)" title="Show Titles">Titles</button>
+							<button class="btn btn-inverse FeedFilterDialog-names" id="FeedFilterDialog_Titles" onclick="FeedFilterDialog.setFilenameMode(false)" title="Show Titles">Titles</button>
 							<button class="btn FeedFilterDialog-names" id="FeedFilterDialog_Filenames" onclick="FeedFilterDialog.setFilenameMode(true)" title="Show Filenames">Filenames</button>
 						</div>
-						<div class="btn-group phone-only inline FeedFilterDialog-filter"><button class="btn FeedFilterDialog-names btn-primary" id="FeedFilterDialog_Titles2" onclick="FeedFilterDialog.setFilenameMode(false)" title="Show Titles">Titles</button></div>
+						<div class="btn-group phone-only inline FeedFilterDialog-filter"><button class="btn FeedFilterDialog-names btn-inverse" id="FeedFilterDialog_Titles2" onclick="FeedFilterDialog.setFilenameMode(false)" title="Show Titles">Titles</button></div>
 						<div class="btn-group phone-only inline FeedFilterDialog-filter"><button class="btn FeedFilterDialog-names" id="FeedFilterDialog_Filenames2" onclick="FeedFilterDialog.setFilenameMode(true)" title="Show Filenames">Filenames</button></div>
 
 					</div>
