post-processing progress label is now automatically trimmed if it doesn't fill into one line; this avoids layout breaking if the text is too long
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@791 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -285,11 +285,12 @@
 				<thead>
 					<tr>
 						<th><div class="check img-check"></div></th>
-						<th width="95px">Status</th><th>Name</th>
+						<th width="95px">Status</th>
+						<th id="DownloadsTable_Name">Name</th>
 						<th id="DownloadsTable_Category">Category</th>
 						<th width="30px" class="text-right">Age</th>
 						<th width="120px"><div style="float:left; position:relative; width:50%; text-align:left;">Size</div><div style="float:right; position:relative; width:50%; text-align:right;">Left</div></th>
-						<th width="58px" class="text-right">Est. time</th>
+						<th width="58px" class="text-right">Est. Time</th>
 					</tr>
 				</thead>
 				<tbody></tbody>
