added collecting of server usage statistical data for each download: number of successful and failed article downloads per news server; new page in history dialog shows collected statistics; new fields in RPC-method "history": ServerStats (array), TotalArticles, SuccessArticles, FailedArticles; new env. vars passed to pp-scripts: NZBPP_TOTALARTICLES, NZBPP_SUCCESSARTICLES, NZBPP_FAILEDARTICLES and per used news server: NZBPP_SERVERX_SUCCESSARTICLES, NZBPP_SERVERX_FAILEDARTICLES; also new env.vars: DELETED, HEALTHDELETED
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@794 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1113,6 +1113,18 @@
 					</fieldset>
 				</div>
 			</div>
+
+			<div class="modal-tab padded-tab hide" id="HistoryEdit_ServStatsTab">
+				<div>
+					<div id="HistoryEdit_ServStatsBlock">
+						<table class="table table-striped table-bordered datatable" id="HistoryEdit_ServStatsTable" style="margin-bottom:15px;">
+							<thead><tr><th>Server</th><th class="text-right">Articles</th><th class="text-right">Art. %</th><th class="text-right">Success</th><th class="text-right">Failures</th></tr></thead>
+							<tbody></tbody>
+						</table>
+					</div>
+					<div class="pull-right hide" id="HistoryEdit_ServStatsTable_pagerBlock"><div class="pagination" id ="HistoryEdit_ServStatsTable_pager"></div></div>
+				</div>
+			</div>
 		</div>
 	</div>
 
