rss filter command "Options" can now increase priority and dupe scrore using new option names "priority+" and "dupecore+"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@818 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1398,8 +1398,10 @@
 		<tbody>
 		<tr><td width="110px">category (cat, c)</td><td>set category name, value is a string;</td></tr>
 		<tr><td>pause (p)</td><td>add nzb in paused or unpaused state, possible values are: "yes", "y", "no", "n";</td></tr>
-		<tr><td>priority (pr, r)</td><td>option value is a signed integer number;</td></tr>
+		<tr><td>priority (pr, r)</td><td>set priority, value is a signed integer number;</td></tr>
+		<tr><td>priority+ (pr+, r+)</td><td>increase priority, value is a signed integer number;</td></tr>
 		<tr><td>dupescore (ds, s)</td><td>set duplicate score, value is a signed integer number;</td></tr>
+		<tr><td>dupescore+ (ds+, s+)</td><td>increase duplicate score, value is a signed integer number;</td></tr>
 		<tr><td>dupekey (dk, k)</td><td>add to duplicate key, value is a string;</td></tr>
 		<tr><td>nodupe (nd, n)</td><td>disable duplicate check for the item, possible values are: "yes", "y", "no", "n".</td></tr>
 		</tbody>
