changed syntax of option "dupekey" of command "Option" in RSS filter: option "dupekey" now sets duplicate key (overrides existing key); option "dupekey+" adds to existing duplicate key
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@819 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1402,7 +1402,8 @@
 		<tr><td>priority+ (pr+, r+)</td><td>increase priority, value is a signed integer number;</td></tr>
 		<tr><td>dupescore (ds, s)</td><td>set duplicate score, value is a signed integer number;</td></tr>
 		<tr><td>dupescore+ (ds+, s+)</td><td>increase duplicate score, value is a signed integer number;</td></tr>
-		<tr><td>dupekey (dk, k)</td><td>add to duplicate key, value is a string;</td></tr>
+		<tr><td>dupekey (dk, k)</td><td>set duplicate key, value is a string;</td></tr>
+		<tr><td>dupekey+ (dk+, k+)</td><td>add to duplicate key, value is a string;</td></tr>
 		<tr><td>nodupe (nd, n)</td><td>disable duplicate check for the item, possible values are: "yes", "y", "no", "n".</td></tr>
 		</tbody>
 		</table>
