extended word/substring search in RSS feed filters with pattern character "#" which matches one digit
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@824 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1478,7 +1478,7 @@
 
 		<strong>More about text search (command @):</strong>
 		<ul>
-		<li>Text search supports wildcard characters * and ?.</li>
+		<li>Text search supports wildcard characters * (matches any number of any characters), ? (matches any one character) and # (matches one digit).</li>
 		<li>Text search is by default performed against words (word-search mode): the field content
 		is separated into words and then each word is checked against pattern.</li>
 		<li>If the search pattern starts and ends with * (star) the search is performed against the
