--- a/webui/index.html
+++ b/webui/index.html
@@ -1399,14 +1399,18 @@
 		<table class="table table-bordered">
 		<tbody>
 		<tr><td width="110px">category (cat, c)</td><td>set category name, value is a string;</td></tr>
-		<tr><td>pause (p)</td><td>add nzb in paused or unpaused state, possible values are: "yes", "y", "no", "n";</td></tr>
+		<tr><td>pause (p)</td><td>add nzb in paused or unpaused state, possible values are: yes (y), no (n);</td></tr>
 		<tr><td>priority (pr, r)</td><td>set priority, value is a signed integer number;</td></tr>
 		<tr><td>priority+ (pr+, r+)</td><td>increase priority, value is a signed integer number;</td></tr>
 		<tr><td>dupescore (ds, s)</td><td>set duplicate score, value is a signed integer number;</td></tr>
 		<tr><td>dupescore+ (ds+, s+)</td><td>increase duplicate score, value is a signed integer number;</td></tr>
 		<tr><td>dupekey (dk, k)</td><td>set duplicate key, value is a string;</td></tr>
 		<tr><td>dupekey+ (dk+, k+)</td><td>add to duplicate key, value is a string;</td></tr>
-		<tr><td>nodupe (nd, n)</td><td>disable duplicate check for the item, possible values are: "yes", "y", "no", "n".</td></tr>
+		<tr><td>dupemode (dm, m)</td><td>set duplicate check mode, possible values are: score (s), all (a), force (f). 
+				<em>Score</em> - download duplicates with higher scores;
+				<em>All</em> - download all duplicates regardless of scores;
+				<em>Force</em> - treat item as unique, ignore all duplicate checks.
+				For <em>Score</em> and <em>All</em> item is skipped if a duplicate marked as "good" exists in history.</td></tr>
 		</tbody>
 		</table>
 		</p>
@@ -1434,13 +1438,11 @@
 		<tbody>
 		<tr><td>+</td>
 		<td>
-		declares a positive term. Terms are positive by default,
-				   the "+" can be omitted;
+		declares a positive term. Terms are positive by default, the "+" can be omitted;
 		</td></tr>
 		<tr><td>-</td>
 		<td>
-		declares a negative term. If the term succeed the feed
-				   item is ignored;
+		declares a negative term. If the term succeeds the rule does not match;
 		</td></tr>
 		<tr>
 		<td>field</td>
@@ -1449,8 +1451,7 @@
 		</td></tr>
 		<tr><td>command</td>
 		<td>
-		a special character defining how to interpret the
-				   parameter (followed after the command):
+		a special character defining how to interpret the parameter (followed after the command):
 			<table class="table-nonbordered">
 			<tbody>
 			<tr><td>@</td><td> - search for string "param". This is default command, the "@" can be omitted;</td></tr>
@@ -1734,7 +1735,7 @@
 					<label class="control-label" for="URL">Options</label>
 					<div class="controls">
 						<label class="checkbox"><input type="checkbox" id="AddDialog_Paused"> Add paused</label>
-						<label class="checkbox"><input type="checkbox" id="AddDialog_NoDupeCheck"> Disable duplicate check</label>
+						<label class="checkbox"><input type="checkbox" id="AddDialog_DupeForce"> Disable duplicate check</label>
 					</div>
 				</div>
 
