added new search fields to RSS feed filter: imdbid, priority, dupekey and dupescore
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@845 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1474,9 +1474,9 @@
 		
 		<ul>
 		<li>Commands @ and $ are for use with text fields (title, filename, category,
-		link, genre).</li>
-		<li>Commands =, &lt;, &lt;=, &gt; and &gt;= are for use with numeric fields (size,
-		age, rating, rageid, season, episode).</li>
+		link, genre, dupekey).</li>
+		<li>Commands =, &lt;, &lt;=, &gt; and &gt;= are for use with numeric fields (size, age,
+		rating, imdbid, rageid, season, episode, priority, dupescore).</li>
 		</ul>
 
 		<strong>More about text search (command @):</strong>
